--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ package-mode = false
 [tool.poetry.dependencies]
 pandas = "==2.3.2"
 requests = "==2.32.5"
+psycopg2-binary = "==2.9.10"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
